// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render flow page 1`] = `
<Fragment>
  <TitleBar>
    Test Page
  </TitleBar>
  <FlowPage
    blocks={
      Array [
        Object {},
        Object {},
      ]
    }
    counter={1}
    currentPage={0}
    data={Object {}}
    emitEvent={[Function]}
    flowActions={
      Object {
        "back": [Function],
        "cancel": [Function],
        "finish": [Function],
        "next": [Function],
      }
    }
    offEvent={[Function]}
    onEvent={[Function]}
    showDialog={[Function]}
    subPages={
      Array [
        Object {
          "blocks": Array [
            Object {},
            Object {},
          ],
          "name": "Sub A",
        },
        Object {
          "blocks": Array [
            Object {},
            Object {},
          ],
          "name": "Sub B",
        },
      ]
    }
  />
  <Connect(PageDialog)
    dialog={null}
    emitEvent={[Function]}
    offEvent={[Function]}
    onEvent={[Function]}
  />
</Fragment>
`;

exports[`should render tabs pages 1`] = `
<Fragment>
  <TitleBar>
    Test Page
  </TitleBar>
  <withRouter(TabsPage)
    counter={1}
    data={Object {}}
    emitEvent={[Function]}
    flowActions={
      Object {
        "back": [Function],
        "cancel": [Function],
        "finish": [Function],
        "next": [Function],
      }
    }
    offEvent={[Function]}
    onEvent={[Function]}
    showDialog={[Function]}
    subPages={
      Array [
        Object {
          "blocks": Array [
            Object {},
            Object {},
          ],
          "name": "Sub A",
        },
        Object {
          "blocks": Array [
            Object {},
            Object {},
          ],
          "name": "Sub B",
        },
      ]
    }
  />
  <Connect(PageDialog)
    dialog={null}
    emitEvent={[Function]}
    offEvent={[Function]}
    onEvent={[Function]}
  />
</Fragment>
`;

exports[`should render the blocks for a page 1`] = `
<Fragment>
  <TitleBar>
    Test Page
  </TitleBar>
  <BlockList
    blocks={
      Array [
        Object {},
        Object {},
      ]
    }
    counter={1}
    data={Object {}}
    emitEvent={[Function]}
    flowActions={
      Object {
        "back": [Function],
        "cancel": [Function],
        "finish": [Function],
        "next": [Function],
      }
    }
    offEvent={[Function]}
    onEvent={[Function]}
    showDialog={[Function]}
    transitions={false}
  />
  <Connect(PageDialog)
    dialog={null}
    emitEvent={[Function]}
    offEvent={[Function]}
    onEvent={[Function]}
  />
</Fragment>
`;
